[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pythonLogs"
version = "4.0.1"
description = "A modern, high-performance Python logging library with automatic file rotation, factory pattern for easy logger creation, and optimized caching for better performance."
license = "MIT"
readme = "README.md"
authors = ["Daniel Costa <danieldcsta@gmail.com>"]
maintainers = ["Daniel Costa"]
repository = "https://github.com/ddc/pythonLogs"
homepage = "https://pypi.org/project/pythonLogs"
packages = [{include = "pythonLogs"}]
package-mode = true
keywords = [
    "python3", "python-3", "python",
    "log", "logging", "logger",
    "logutils", "log-utils", "pythonLogs"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]


[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.9.2"
poethepoet = "^0.36.0"
psutil = "^7.0.0"
pytest = "^8.4.1"


[tool.poetry.group.test]
optional = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]


[tool.coverage.run]
omit = [
    "tests/*",
]


[tool.poe.tasks]
_test = "coverage run -m pytest -v"
_coverage_report = "coverage report"
_coverage_xml = "coverage xml"
tests = ["_test", "_coverage_report", "_coverage_xml"]
test = ["tests"]
