[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonLogs"
version = "6.0.0"
description = "High-performance Python logging library with file rotation and optimized caching for better performance"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Daniel Costa", email = "danieldcsta@gmail.com"}]
maintainers = [{name = "Daniel Costa"}]
keywords = [
    "python3", "python-3", "python",
    "log", "logging", "logger",
    "logutils", "log-utils", "pythonLogs"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[project.urls]
Homepage = "https://pypi.org/project/pythonLogs"
Repository = "https://github.com/ddc/pythonLogs"

[project.optional-dependencies]
test = [
    "poethepoet>=0.40.0",
    "psutil>=7.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build]
include = ["pythonLogs/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["pythonLogs"]

[tool.poe.tasks]
build = "uv build --wheel"
updatedev.shell = "uv lock && uv sync --no-install-project --all-extras"
linter.shell = "uv run ruff check --fix --select I . && uv run black ."
profile = "uv run python -m cProfile -o cprofile.prof -m pytest"
test = "uv run pytest"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report=term --cov-report=xml --junitxml=junit.xml"
junit_family = "legacy"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["pythonLogs"]
force-sort-within-sections = true
no-sections = true
